tests/error/linear_errors/implicit_drop_in_match1.err
Error: Drop violation (at $FILE:20:25)
   | 
18 | @compile_guppy
19 | def main() -> None:
20 |     match describe_point(fun()):
   |                          ^^^^^ Value with non-droppable type `Point` would be leaked after
   |                                `describe_point` returns

Help: Consider assigning the value to a local variable before passing it to
`describe_point`

Guppy compilation failed due to 1 previous error
